--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,10 @@
   <body>
     <!-- Write your HTML code here, you can delete everything withing the body tags -->
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+      <h1 class="mt-5">OMG you will not believe me but...</h1>
+      <h1 id="the-excuse" class="mt-5">My dog ate my food</h1>
+      <button id="btn">Generate new excuse</button>  
+    </div>
     </div>
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
